--- a/算法基础/算法基础.md
+++ b/算法基础/算法基础.md
@@ -2,7 +2,7 @@
 
 ## 基础算法
 
-### 排序
+### 快速排序
 
 #### 快速排序
 
@@ -212,5 +212,66 @@ int main()
 	cout << quick_sort(0 , n - 1 , k);
 }
  
+```
+
+### 归并排序
+
+#### 归并排序
+
+思想：分治
+
+![image-20201124154356625](D:\Github\MyNotes\算法基础\image-20201124154356625.png)
+
+1. 确定分界点$min=(left+right)/2$
+2. 递归排序left和right
+3. 归并——合二为一
+
+![image-20201124164059779](D:\Github\MyNotes\算法基础\image-20201124164059779.png)
+
+时间复杂度$log^n$
+
+模板：
+
+```c++
+//归并排序
+#include<iostream>
+#include<cstdio>
+
+using namespace std;
+
+const int N = 1000010;
+
+int n;
+int q[N], temp[N];
+
+void merge_sort(int q[], int l, int r)
+{
+	if (l >= r) return;
+
+	int mid = (l + r) / 2;
+
+	merge_sort(q, l, mid);
+	merge_sort(q, mid + 1, r);
+
+	int k = 0, i = l, j = mid + 1;
+	while (i <= mid && j <= r)
+		if (q[i] < q[j]) temp[k++] = q[i++];
+		else temp[k++] = q[j++];
+	while (i <= mid) temp[k++] = q[i++];
+	while (j <= r) temp[k++] = q[j++];
+
+	for (i = l, j = 0; i <= r; i++, j++) q[i] = temp[j];
+}
+
+int main()
+{
+	scanf_s("%d", &n);
+	for (int i = 0; i < n; i++) scanf_s("%d", &q[i]);
+
+	merge_sort(q, 0, n - 1);
+
+	for (int i = 0; i < n; i++) printf("%d ", q[i]);
+	return 0;
+}
 ```
 
