--- a/算法基础/算法基础.md
+++ b/算法基础/算法基础.md
@@ -275,3 +275,96 @@ int main()
 }
 ```
 
+#### 逆序对的数量
+
+归并排序：
+
+1. 【L,R】=》【L，mid】，【mid+1，R】
+2. 递归排序【L，mid】，【mid+1，R】
+3. 归并，将左右两个有序序列合并成一个有序序列
+
+```c++
+
+```
+
+### 二分
+
+有单调性一定可以二分，可以二分的题目不一定非要有单调性
+
+##### 整数二分
+
+题目中的二分要求满足一定的性质
+
+![image-20210304060458469](D:\Github\MyNotes\算法基础\image-20210304060458469.png)
+
+右边满足这个性质，左边不满足这个性质
+
+根据这个性质，找到两个边界箭头所指的位置，两个点代表两个不同的模板
+
+①红色点（找边界）
+
+![image-20210304061437004](D:\Github\MyNotes\算法基础\image-20210304061437004.png)
+
+区间都是包含（上面是l+r+1）
+
+②绿色点（找边界）
+
+![image-20210304062447114](D:\Github\MyNotes\算法基础\image-20210304062447114.png)
+
+**两个模板的使用场景：一般先写check函数观察区间改变，如果是l=mid则加1（模板1），否则模板2**
+
+为什么要加1：当l=r-1的时候，mid不加1的话，mid=l，区间还是【l，r】出现死循环；加1，mid=r。
+
+![image-20210304063436683](D:\Github\MyNotes\算法基础\image-20210304063436683.png)
+
+```c++
+//区间[l，r]被划分成[l，mid]和[mid+1，r]时使用
+int bsearch_2(int l, int r)
+{
+    while(l<r)
+    {
+        int mid = l + r >> 1;
+        if(check(mid)) r = mid;  //check()判断mid是否满足性质
+        else l = mid + 1;
+    }
+    return l;
+}
+
+//区间[l,r]被划分成[l,mid-1]和[mid,r]时使用
+int bsearch_2(int l,int r)
+{
+    while(l < r)
+    {
+        int mid = l + r + 1 >> 1;
+        if(check(mid)) l = mid;
+        else r = mid - 1;
+    }
+    return l;
+}
+```
+
+#### 数的范围
+
+#### 数的三次方跟
+
+题目要求保留6位小数，判断条件取10得-8，更加保险。lf默认小数点后六位。
+
+### 高精度
+
+![image-20210306070858043](D:\Github\MyNotes\算法基础\image-20210306070858043.png)
+
+#### 高精度加法	
+
+**（1）大整数存储**
+
+![image-20210306071401241](D:\Github\MyNotes\算法基础\image-20210306071401241.png)
+
+数组存储得时候，会把个位存在最前面，因为方便之后的加法进位（进位向前加一个数，最高位进位需要增加一个数，算法在最后一位加数更加容易push_back）。
+
+**（2）运算，模拟人工加法**
+
+![image-20210306072036176](D:\Github\MyNotes\算法基础\image-20210306072036176.png)
+
+ 	![image-20210306072047944](D:\Github\MyNotes\算法基础\image-20210306072047944.png)
+
+t是上一位的进位
