--- a/算法基础/算法基础.md
+++ b/算法基础/算法基础.md
@@ -291,6 +291,8 @@ int main()
 
 有单调性一定可以二分，可以二分的题目不一定非要有单调性
 
+mid=(low+high)/2的改进：如果 low 和 high 比较大的话，两者之和就有可能会溢出。改进的方法是将 mid 的计算方式写成 low+(high-low)/2。性能优化到极致low+((high-low)>>1)计算机处理位运算更快。
+
 ##### 整数二分
 
 题目中的二分要求满足一定的性质
@@ -486,5 +488,85 @@ int main()
 }
 ```
 
+#### 高精度乘法
+
+![image-20210323134533655](D:\Github\MyNotes\算法基础\image-20210323134533655.png)
+
+```c++
+#include<iostream>
+#include<vector>
+
+using namespace std;
+
+vector<int> muti(vector<int> &A, int b) 
+{
+	vector<int> C;
+	int t = 0;
+
+	for (int i = 0; i < A.size() || t; i++)
+	{
+		if (i < A.size()) t += A[i] * b;
+		C.push_back(t % 10);
+		t /= 10;
+	}
+	// 去掉前导0
+	while (C.size() > 1 && C.back() == 0) C.pop_back();
+
+	return C;
+}
+
+int main()
+{
+	vector<int> A;
+	string a;
+	int b;
+
+	cin >> a >> b;
+
+	for (int i = a.size() - 1; i >= 0; i--) A.push_back(a[i] - '0');
+
+	auto C = muti(A, b);
+
+	for (int i = C.size() - 1; i >= 0; i--) printf_s("%d", C[i]);
+
+	return 0;
+}
+```
+
+#### 高精度除法
+
+![image-20210324131749251](D:\Github\MyNotes\算法基础\image-20210324131749251.png)
+
+```c++
+
+```
+
+### 前缀和差分
+
+#### 前缀和
+
+#### 子矩阵的和
+
+子矩阵怎么计算
+
+![image-20210329132544788](D:\Github\MyNotes\算法基础\image-20210329132544788.png)
+
+s[i，j]怎么计算
+
+![image-20210329133400967](D:\Github\MyNotes\算法基础\image-20210329133400967.png)
+
+#### 差分
 
 
+
+![image-20210401143428700](D:\Github\MyNotes\算法基础\image-20210401143428700.png)
+
+![image-20210401150406610](D:\Github\MyNotes\算法基础\image-20210401150406610.png)
+
+## 数据结构
+
+### 单链表
+
+笔试不会用：
+
+![image-20210426090245157](D:\Github\MyNotes\算法基础\image-20210426090245157.png)
