--- a/算法基础/算法基础.md
+++ b/算法基础/算法基础.md
@@ -567,6 +567,45 @@ s[i，j]怎么计算
 
 ### 单链表
 
-笔试不会用：
+数组（静态）模拟链表相较于指针（动态，new操作很慢）链表的好处：速度快
+
+面试会用，笔试不会用：
 
 ![image-20210426090245157](D:\Github\MyNotes\算法基础\image-20210426090245157.png)
+
+![image-20210721091932580](D:\Github\MyNotes\算法基础\image-20210721091932580.png)
+
+插入操作：
+
+![image-20210906132942173](D:\Github\MyNotes\算法基础\image-20210906132942173.png)
+
+将节点插入k节点的后面：
+
+![image-20210906134325495](D:\Github\MyNotes\算法基础\image-20210906134325495.png)
+
+删除操作：
+
+![image-20210906134729680](D:\Github\MyNotes\算法基础\image-20210906134729680.png)
+
+#### 邻接表——n个链表（最常用）
+
+应用：存储树和图
+
+### 双链表
+
+用途：优化某些问题
+
+![image-20210907130946442](D:\Github\MyNotes\算法基础\image-20210907130946442.png)
+
+在某一个点的右边插入一个数：
+
+![image-20210907131037389](D:\Github\MyNotes\算法基础\image-20210907131037389.png)
+
+![image-20210907131220859](D:\Github\MyNotes\算法基础\image-20210907131220859.png)
+
+​	删除第k个点：
+
+![image-20210907180254225](D:\Github\MyNotes\算法基础\image-20210907180254225.png)
+
+
+
